--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "format": "prettier --single-quote --trailing-comma all --tab-width 4 --write src/**/*.{js,json,scss}",
-    "start": "nodemon --inspect src/index.js",
+    "start": "node index.js",
+    "start:dev": "nodemon --inspect src/index.js",
     "watch": "node-sass -w src/resources/scss/ --output src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
